--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8000
-MONGO_URI=mongodb://localhost:27017/crmapp
+MONGO_URI=mongodb+srv://dhanalakshmidk7:egswwjfhJ9QCccnW@cluster0.titokkr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=5d41402abc4b2a76b9719d911017c592
 
